[gd_scene load_steps=68 format=3 uid="uid://n1xld431jo4h"]

[ext_resource type="Script" path="res://src/character/character.gd" id="1_37qod"]
[ext_resource type="Texture2D" uid="uid://d3uee1ywnrkdw" path="res://resources/textures/Player/character_sprite.png" id="2_d8rvn"]
[ext_resource type="Texture2D" uid="uid://cqkfttxpieqtm" path="res://resources/textures/Player/Respawn/respawn_effect.png" id="3_j2vmb"]
[ext_resource type="PackedScene" uid="uid://bbk6ewi6mecli" path="res://src/utilities/hurt_box.tscn" id="3_ymp8k"]
[ext_resource type="Texture2D" uid="uid://dxf0r2e2btmga" path="res://resources/textures/GUI/exp_bar.png" id="4_jwoex"]
[ext_resource type="Texture2D" uid="uid://cve5xx6cl1njw" path="res://resources/textures/GUI/exp_bar_over.png" id="5_eqxls"]
[ext_resource type="FontFile" uid="uid://is5lj7e2akmp" path="res://resources/font/bionicle-training-card-font-2-4.otf" id="7_c5i48"]
[ext_resource type="AudioStream" uid="uid://xd550xu3p3ih" path="res://resources/audio/SoundEffect/levelup.ogg" id="7_gfyjg"]
[ext_resource type="Texture2D" uid="uid://cqm20ey3v51bv" path="res://resources/textures/GUI/exp_bar_progress.png" id="7_t2qlu"]
[ext_resource type="Texture2D" uid="uid://cqiqs0okqwv23" path="res://resources/textures/GUI/health_bar.png" id="8_0fplp"]
[ext_resource type="Texture2D" uid="uid://krpnxj607yo1" path="res://resources/textures/Light/circle.png" id="9_5oko8"]
[ext_resource type="Texture2D" uid="uid://dygri85vc1ehq" path="res://resources/textures/GUI/health_bar_progress.png" id="9_gbuj6"]
[ext_resource type="AudioStream" uid="uid://gx58xr238mhy" path="res://resources/audio/SoundEffect/Victory.wav" id="10_gvmsg"]
[ext_resource type="AudioStream" uid="uid://ber5rdwaolgot" path="res://resources/audio/SoundEffect/Lose.ogg" id="11_3bdrj"]
[ext_resource type="AudioStream" uid="uid://bx7olwv4c7fi7" path="res://resources/audio/SoundEffect/get_damage.ogg" id="14_p621d"]
[ext_resource type="PackedScene" uid="uid://dd81g2vvmtvgm" path="res://src/utilities/texture_button_base.tscn" id="15_8yrhf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rrgkl"]
radius = 4.5

[sub_resource type="Animation" id="Animation_yydyx"]
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Damage"]
}

[sub_resource type="Animation" id="Animation_5k1p1"]
length = 0.888889
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.777778),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../PointLight2D2:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.870588, 0.129412, 0, 1), Color(0.870588, 0.129412, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0cbws"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_x6rbs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../PointLight2D2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.870588, 0.129412, 0, 1)]
}

[sub_resource type="Animation" id="Animation_gp5pa"]
length = 0.625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Respawn"]
}

[sub_resource type="Animation" id="Animation_8k5ly"]
length = 0.833333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yub4f"]
_data = {
"Damage": SubResource("Animation_yydyx"),
"Death": SubResource("Animation_5k1p1"),
"Idle": SubResource("Animation_0cbws"),
"RESET": SubResource("Animation_x6rbs"),
"Respawn": SubResource("Animation_gp5pa"),
"Walk": SubResource("Animation_8k5ly")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_mhyan"]
atlas = ExtResource("2_d8rvn")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3idj6"]
atlas = ExtResource("2_d8rvn")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu2ib"]
atlas = ExtResource("2_d8rvn")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y14dq"]
atlas = ExtResource("2_d8rvn")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jh1f"]
atlas = ExtResource("2_d8rvn")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57ydg"]
atlas = ExtResource("2_d8rvn")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn57o"]
atlas = ExtResource("2_d8rvn")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi2nw"]
atlas = ExtResource("2_d8rvn")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i320f"]
atlas = ExtResource("2_d8rvn")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcdp5"]
atlas = ExtResource("2_d8rvn")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iraro"]
atlas = ExtResource("2_d8rvn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53uyi"]
atlas = ExtResource("2_d8rvn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2myie"]
atlas = ExtResource("2_d8rvn")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmkg3"]
atlas = ExtResource("2_d8rvn")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a85w0"]
atlas = ExtResource("2_d8rvn")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtfry"]
atlas = ExtResource("2_d8rvn")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ka36"]
atlas = ExtResource("2_d8rvn")
region = Rect2(192, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fs65x"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_mhyan")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3idj6")
}],
"loop": false,
"name": &"Damage",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu2ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y14dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jh1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57ydg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn57o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi2nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i320f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcdp5")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iraro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53uyi")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2myie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmkg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a85w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtfry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ka36")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ua61b"]
atlas = ExtResource("3_j2vmb")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4b7b"]
atlas = ExtResource("3_j2vmb")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_arru7"]
atlas = ExtResource("3_j2vmb")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5smf"]
atlas = ExtResource("3_j2vmb")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6y1"]
atlas = ExtResource("3_j2vmb")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o65p"]
atlas = ExtResource("3_j2vmb")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsy8h"]
atlas = ExtResource("3_j2vmb")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxhew"]
atlas = ExtResource("3_j2vmb")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqge1"]
atlas = ExtResource("3_j2vmb")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcn4p"]
atlas = ExtResource("3_j2vmb")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3cru"]
atlas = ExtResource("3_j2vmb")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g3gt"]
atlas = ExtResource("3_j2vmb")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp4ro"]
atlas = ExtResource("3_j2vmb")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3inpr"]
atlas = ExtResource("3_j2vmb")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m1fy"]
atlas = ExtResource("3_j2vmb")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3upnh"]
atlas = ExtResource("3_j2vmb")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eft4x"]
atlas = ExtResource("3_j2vmb")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf14d"]
atlas = ExtResource("3_j2vmb")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovwri"]
atlas = ExtResource("3_j2vmb")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh6dh"]
atlas = ExtResource("3_j2vmb")
region = Rect2(768, 576, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_cto66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua61b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4b7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arru7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5smf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o65p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsy8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxhew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqge1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcn4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3cru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g3gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp4ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3inpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m1fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3upnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eft4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf14d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovwri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh6dh")
}],
"loop": false,
"name": &"Respawn_shield",
"speed": 17.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p3or"]
size = Vector2(13, 33)

[sub_resource type="CircleShape2D" id="CircleShape2D_uik64"]
radius = 318.057

[sub_resource type="CircleShape2D" id="CircleShape2D_2umvl"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a2g3k"]

[node name="Character" type="CharacterBody2D" node_paths=PackedStringArray("transform_adjustment") groups=["character"]]
z_index = 2
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_37qod")
transform_adjustment = NodePath("TransformAdjustment")
metadata/_edit_vertical_guides_ = [640.0]
metadata/_edit_horizontal_guides_ = [14.0, -110.0]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(1.4, 0.717949)
shape = SubResource("CapsuleShape2D_rrgkl")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(2, 2)
rotation_smoothing_speed = 100.0

[node name="TransformAdjustment" type="Node2D" parent="."]
z_index = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransformAdjustment"]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_yub4f")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TransformAdjustment"]
position = Vector2(1, -1)
scale = Vector2(1.13039, 1.06553)
sprite_frames = SubResource("SpriteFrames_fs65x")
animation = &"Damage"
autoplay = "Idle"

[node name="RespawnAnimatedSprite2D" type="AnimatedSprite2D" parent="TransformAdjustment"]
visible = false
position = Vector2(-1, -1)
scale = Vector2(0.443877, 0.447146)
sprite_frames = SubResource("SpriteFrames_cto66")
animation = &"Respawn_shield"

[node name="Attack" type="Node2D" parent="."]

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="SkipjackTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="SkipjackAttackTimer" type="Timer" parent="Attack/SkipjackTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="BoomerangTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="BoomerangAttackTimer" type="Timer" parent="Attack/BoomerangTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TrapTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavalinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="AuraWaterSpawn" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="SplashTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="AuraWater" type="Node2D" parent="Attack"]
unique_name_in_owner = true
z_index = -1

[node name="StickyGreenBulletAttackTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="HurtBox" parent="." instance=ExtResource("3_ymp8k")]
scale = Vector2(0.948146, 0.788351)
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_4p3or")

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_uik64")

[node name="GrabArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_2umvl")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_a2g3k")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="Timer" type="Timer" parent="GUILayer/GUI"]
autostart = true

[node name="ExpBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1260.0
offset_bottom = 10.0
scale = Vector2(0.999548, 0.991823)
value = 12.0
texture_under = ExtResource("4_jwoex")
texture_over = ExtResource("5_eqxls")
texture_progress = ExtResource("7_t2qlu")
tint_progress = Color(0.0509804, 0.45098, 0.517647, 1)

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_left = 304.0
offset_top = 198.0
offset_right = 336.0
offset_bottom = 209.0
scale = Vector2(0.900081, 1.1895)
value = 50.0
texture_under = ExtResource("8_0fplp")
texture_progress = ExtResource("9_gbuj6")
tint_progress = Color(0.847059, 0, 0.227451, 1)

[node name="LevelUpPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1020.0
offset_bottom = 300.0

[node name="LevelUpLabel" type="Label" parent="GUILayer/GUI/LevelUpPanel"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("7_c5i48")
text = "Level Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUpPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 9.5
offset_top = 37.5
offset_right = 209.5
offset_bottom = 97.5

[node name="LevelUpSound" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUpPanel"]
unique_name_in_owner = true
stream = ExtResource("7_gfyjg")
volume_db = -36.02

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 448.0
offset_top = -272.0
offset_right = 668.0
offset_bottom = -22.0

[node name="ResultLabel" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 220.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("7_c5i48")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldLabel" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 37.0
offset_top = 45.0
offset_right = 192.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("7_c5i48")
theme_override_font_sizes/font_size = 14
text = "GOLD Collected: "
vertical_alignment = 1

[node name="VictorySound" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_gvmsg")
volume_db = -36.02

[node name="LoseSound" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_3bdrj")
volume_db = -36.02

[node name="ButtonMenu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("15_8yrhf")]
layout_mode = 0
offset_left = 39.0
offset_top = 162.0
offset_right = 2087.0
offset_bottom = 1186.0
scale = Vector2(0.0713413, 0.0705195)
label_text = "Menu"

[node name="PausePanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 216.0
offset_top = -270.0
offset_right = 436.0
offset_bottom = -21.0

[node name="PauseLabel" type="Label" parent="GUILayer/GUI/PausePanel"]
layout_mode = 0
offset_right = 220.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("7_c5i48")
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" parent="GUILayer/GUI/PausePanel" instance=ExtResource("15_8yrhf")]
layout_mode = 0
offset_left = 41.0
offset_top = 161.0
offset_right = 2089.0
offset_bottom = 1185.0
scale = Vector2(0.0711589, 0.0711589)
label_text = "Exit"

[node name="ResumeButton" parent="GUILayer/GUI/PausePanel" instance=ExtResource("15_8yrhf")]
layout_mode = 0
offset_left = 41.0
offset_top = 82.0
offset_right = 2089.0
offset_bottom = 1106.0
scale = Vector2(0.070642, 0.0705295)
label_text = "Resume"

[node name="Stats" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 267.0
offset_right = 149.0
offset_bottom = 423.0
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.933333, 0.627451)
theme_override_fonts/font = ExtResource("7_c5i48")
theme_override_font_sizes/font_size = 8
text = "movement_speed: 
max_healt: 
armor: 
spell_cooldown: 
spell_size: 
additional_attack: "

[node name="Time" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 295.0
offset_top = 9.0
offset_right = 355.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("7_c5i48")
theme_override_font_sizes/font_size = 20
text = "00: 00"

[node name="LevelLabel" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 529.0
offset_top = 9.0
offset_right = 636.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("7_c5i48")
theme_override_font_sizes/font_size = 20
text = "LV: 1"
horizontal_alignment = 2

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 14.0
offset_right = 107.0
offset_bottom = 30.0
columns = 3

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 63.0
offset_top = 14.0
offset_right = 163.0
offset_bottom = 30.0
columns = 3

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(4, -15)
color = Color(1, 0.521569, 1, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("9_5oko8")

[node name="PointLight2D2" type="PointLight2D" parent="."]
scale = Vector2(0.0499927, 0.0603596)
color = Color(0.870588, 0.129412, 0, 1)
energy = 1.7
texture = ExtResource("9_5oko8")

[node name="GetDamagePlay" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_p621d")
volume_db = -30.0
pitch_scale = 1.09

[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/SkipjackTimer" to="." method="_on_skipjack_timer_timeout"]
[connection signal="timeout" from="Attack/SkipjackTimer/SkipjackAttackTimer" to="." method="_on_skipjack_attack_timer_timeout"]
[connection signal="timeout" from="Attack/BoomerangTimer" to="." method="_on_boomerang_timer_timeout"]
[connection signal="timeout" from="Attack/BoomerangTimer/BoomerangAttackTimer" to="." method="_on_boomerang_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TrapTimer" to="." method="_on_trap_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="timeout" from="Attack/AuraWaterSpawn" to="." method="_on_aura_water_spawn_timeout"]
[connection signal="timeout" from="Attack/SplashTimer" to="." method="_on_splash_timer_timeout"]
[connection signal="timeout" from="Attack/StickyGreenBulletAttackTimer" to="." method="_on_sticky_green_bullet_attack_timer_timeout"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="timeout" from="GUILayer/GUI/Timer" to="." method="_on_timer_timeout"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/ButtonMenu" to="." method="_on_button_menu_click_end"]
[connection signal="click_end" from="GUILayer/GUI/PausePanel/ExitButton" to="." method="_on_exit_button_click_end"]
[connection signal="click_end" from="GUILayer/GUI/PausePanel/ResumeButton" to="." method="_on_resume_button_click_end"]

[editable path="HurtBox"]
